--- a/src/pages/VideoDetails/index.scss
+++ b/src/pages/VideoDetails/index.scss
@@ -62,6 +62,17 @@
     }
     &-buttons{
       margin-left: auto;
+      
+      &> * {
+        display: inline-flex;
+        align-items: center;
+      }
+      &-subscription {
+        background-color: red;
+        color:  var(--white);
+        border: none;
+        padding: 10px 16px;
+      }
     }
   }
   &__video-list {
